TestSuite/Verification/Error/Serial/Syntax/Expression/out/includes/ArrayExpressionTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef ArrayExpressionTest_HXX
#define ArrayExpressionTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif